Adding first draft of introduction.

--- a/report/report.tex
+++ b/report/report.tex
@@ -1,9 +1,8 @@
 
 \documentclass{l4proj}
 
-%
-% put any packages here
-%
+%Packages
+\usepackage{natbib}
 
 \begin{document}
 \title{Augmented Reality Android Gym App}
@@ -25,69 +24,19 @@ Something will go here.
 
 \chapter{Introduction}
 \pagenumbering{arabic}
-
-
-\begin{verbatim}
-
-            > pdflatex example0
-            > bibtex example0
-            > pdflatex example0
-            > pdflatex example0
-
-\end{verbatim}
-
-
 \section{Motivation}
-The quick brown fox jumped over the lazy dog.
-The quick brown fox jumped over the lazy dog.
-The quick brown fox jumped over the lazy dog.
-The quick brown fox jumped over the lazy dog.
-The quick brown fox jumped over the lazy dog.
-The quick brown fox jumped over the lazy dog.
-The quick brown fox jumped over the lazy dog.
-The quick brown fox jumped over the lazy dog.
-
-\section{Background}
-The quick brown fox jumped over the lazy dog.
-The quick brown fox jumped over the lazy dog.
-The quick brown fox jumped over the lazy dog.
-The quick brown fox jumped over the lazy dog.
-
-The quick brown fox jumped over the lazy dog.
-The quick brown fox jumped over the lazy dog.
-The quick brown fox jumped over the lazy dog.
-The quick brown fox jumped over the lazy dog.
+Frequent exercise and a healthy lifestyle have recently become an integral part of the western culture. Indeed, last year in America more people have exercised on a regular basis then ever before \cite{USexercise}. As people begin to adopt this new lifestyle it is immediately obvious that there are two distinct periods during which there seems to be a lack of coherent information. These are at the very beginning when a person begins to exercise for the first time and when a person begins to plateau and starts to experience diminishing returns for their work due to a lack of variation in their routine. It is important to note that a lack of coherent information does not necessarily mean a lack of data but instead a lack of singular consensus in the midst of conflicting and misleading information filled with fad diets, ill-informed advice and 'bro science'. It is therefore obvious that there is a need for a singular portal to which beginners and experienced gym goers alike can refer to for information. 
 
 \section{Aim}
-The quick brown fox jumped over the lazy dog.
-The quick brown fox jumped over the lazy dog.
-The quick brown fox jumped over the lazy dog.
-The quick brown fox jumped over the lazy dog.
-The quick brown fox jumped over the lazy dog.
-The quick brown fox jumped over the lazy dog.
-The quick brown fox jumped over the lazy dog.
-The quick brown fox jumped over the lazy dog.
+Tackling the entire topic of fitness in one application would be extremely difficult, if not impossible. Due to this we are going to focus on the gym environment and look to add value to users while they are in the gym. The aim of the application will be to help users to understand how to use gym equipment, suggest a range of exercises that can be carried out on a given piece of equipment and demonstrate how to perform the exercise with correct and safe form. 
+
+One of the main goals of the app is for it to be responsive to the users environment and heavily interactive so that the user has an immersive experience. However, there is a balance to be struck to ensure that users do not loose awareness of their surrounding. One possible way of achieving this is through augmented reality which will allow us to super impose realistic human models on their device's screen without the need for a completely virtualized reality.  
+
 
 \section{Outline}
-The quick brown fox jumped over the lazy dog.
-The quick brown fox jumped over the lazy dog.
-The quick brown fox jumped over the lazy dog.
-The quick brown fox jumped over the lazy dog.
-The quick brown fox jumped over the lazy dog.
+In this document we are going to explore the different steps taken in the development of the augmented reality gym app. First we will look at requirements gathering and elicitation. Then we will discuss the possible designs of the app both from a user experience and user interface aspect. Later we will go trough the steps in implementation and testing, outlining the procedure and any major problems along the way. Finally we will draw the document to a close with a conclusion, followed by an evaluation where we will address to what extend the main goals of the project were achieved and reflect on what could have been done differently for future reference. 
 
-The quick brown fox jumped over the lazy dog.
-The quick brown fox jumped over the lazy dog.
-The quick brown fox jumped over the lazy dog.
-The quick brown fox jumped over the lazy dog.
-The quick brown fox jumped over the lazy dog.
-The quick brown fox jumped over the lazy dog.
-The quick brown fox jumped over the lazy dog.
-The quick brown fox jumped over the lazy dog.
-The quick brown fox jumped over the lazy dog.
-The quick brown fox jumped over the lazy dog.
-The quick brown fox jumped over the lazy dog.
-
-\chapter{Requirement}
+\chapter{Requirements}
 The quick brown fox jumped over the lazy dog.
 The quick brown fox jumped over the lazy dog.
 The quick brown fox jumped over the lazy dog.
