Adding squating animations, begining literature review

--- a/report/bib.bib
+++ b/report/bib.bib
@@ -50,4 +50,127 @@
   file = {So Far in 2015, More Americans Exercising Frequently:C\:\\Users\\David\\AppData\\Roaming\\Mozilla\\Firefox\\Profiles\\xfvdzb0o.default\\zotero\\storage\\8AR22XB2\\far-2015-americans-exercising-frequently.html:text/html}
 }
 
+@misc{vuforia,
+  title = {Getting {{Started}} with {{Vuforia}}},
+  timestamp = {2016-10-04T13:13:17Z},
+  urldate = {2016-10-04},
+  howpublished = {\url{https://library.vuforia.com/getting-started}},
+  author = {{Vuforia}},
+  year = {2016}
+}
+
+@misc{vuforia_unity,
+  title = {How to {{Build}} an {{AR Android App}} with {{Vuforia}} and {{Unity}}},
+  abstract = {Srinivas Rao goes through the entire process of building an augmented reality app for Android in Unity with Vuforia, without writing a single line of code!},
+  timestamp = {2016-10-04T13:10:41Z},
+  urldate = {2016-10-04},
+  journal = {SitePoint},
+  author = {Rao, Srinivas},
+  year = {2015-10-26T09:00:34+00:00},
+  file = {Snapshot:C\:\\Users\\David\\AppData\\Roaming\\Mozilla\\Firefox\\Profiles\\xfvdzb0o.default\\zotero\\storage\\JHFPABQ2\\2015 - How to Build an AR Android App with Vuforia and Un.html:text/html}
+}
+
+@article{squire_augmented_2007,
+  title = {Augmented {{Reality Simulations}} on {{Handheld Computers}}},
+  volume = {16},
+  issn = {1050-8406},
+  abstract = {Advancements in handheld computing, particularly its portability, social interactivity, context sensitivity, connectivity, and individuality, open new opportunities for immersive learning environments. This article articulates the pedagogical potential of augmented reality simulations in environmental engineering education by immersing students in the roles of scientists conducting investigations. This design experiment examined if augmented reality simulation games can be used to help students understand science as a social practice, whereby inquiry is a process of balancing and managing resources, combining multiple data sources, and forming and revising hypotheses in situ. We provide 4 case studies of secondary environmental science students participating in the program. Positioning students in virtual investigations made apparent their beliefs about science and confronted simplistic beliefs about the nature of science. Playing the game in "real" space also triggered students' preexisting knowledge, suggesting that a powerful potential of augmented reality simulation games can be in their ability to connect academic content and practices with students' physical, lived worlds. The game structure provided students a narrative to think with, although students differed in their ability to create a coherent narrative of events. We argue that Environmental Detectives is 1 model for helping students understand the socially situated nature of scientific practice.},
+  timestamp = {2016-10-07T11:38:02Z},
+  number = {3},
+  urldate = {2016-10-07},
+  journal = {The Journal of the Learning Sciences},
+  author = {Squire, Kurt and Klopfer, Eric},
+  year = {2007},
+  pages = {371--413}
+}
+
+@article{azuma_survey_1997-2,
+  title = {A {{Survey}} of {{Augmented Reality}}},
+  volume = {6},
+  issn = {1054-7460, 1531-3263},
+  doi = {10.1162/pres.1997.6.4.355},
+  language = {en},
+  timestamp = {2016-10-07T13:04:38Z},
+  number = {4},
+  urldate = {2016-10-07},
+  journal = {Presence: Teleoperators and Virtual Environments},
+  author = {Azuma, Ronald T.},
+  month = aug,
+  year = {1997},
+  pages = {355--385}
+}
+
+@inproceedings{radu_why_2012,
+  title = {Why Should My Students Use {{AR}}? {{A}} Comparative Review of the Educational Impacts of Augmented-Reality},
+  shorttitle = {Why Should My Students Use {{AR}}?},
+  doi = {10.1109/ISMAR.2012.6402590},
+  abstract = {Augmented reality is increasingly reaching young users such as elementary-school and high-school children, as their parents and teachers become aware of the technology and its potential for education. Although research has shown that AR systems have the potential to improve student learning, the educator community does not clearly understand the educational impact of AR, nor the factors which impact the educational effectiveness of AR. In this poster, we analyse 32 publications that have previously compared learning effects of AR vs non-AR applications. We identify a list of positive and negative impacts of AR on student learning, and identify potential underlying causes for these effects. Our vision is that educational initiatives will exploit these factors, in order to realize the full potential of AR to enrich learner's lives.},
+  timestamp = {2016-10-07T13:40:31Z},
+  booktitle = {2012 {{IEEE International Symposium}} on {{Mixed}} and {{Augmented Reality}} ({{ISMAR}})},
+  author = {Radu, I.},
+  month = nov,
+  year = {2012},
+  keywords = {AR learning effects,AR systems,Augmented Reality,Augmented reality,augmented reality,augmented-reality,Children,computer aided instruction,Computers,Education,educational effectiveness,educational impacts,educational initiatives,educator community,elementary-school children,high-school children,Human Factors,Human factors,Machine learning,Media,parents,Solid modeling,student learning,teachers},
+  pages = {313--314},
+  file = {IEEE Xplore Full Text PDF:C\:\\Users\\David\\AppData\\Roaming\\Mozilla\\Firefox\\Profiles\\xfvdzb0o.default\\zotero\\storage\\4SHN3BM5\\Radu - 2012 - Why should my students use AR A comparative revie.pdf:application/pdf;IEEE Xplore Abstract Record:C\:\\Users\\David\\AppData\\Roaming\\Mozilla\\Firefox\\Profiles\\xfvdzb0o.default\\zotero\\storage\\6RCE95E9\\Radu - 2012 - Why should my students use AR A comparative revie.html:text/html}
+}
+
+@article{azuma_recent_2001,
+  title = {Recent Advances in Augmented Reality},
+  volume = {21},
+  issn = {02721716},
+  doi = {10.1109/38.963459},
+  timestamp = {2016-10-07T14:30:54Z},
+  number = {6},
+  urldate = {2016-10-07},
+  journal = {IEEE Computer Graphics and Applications},
+  author = {Azuma, R. and Baillot, Y. and Behringer, R. and Feiner, S. and Julier, S. and MacIntyre, B.},
+  year = {Nov.-Dec./2001},
+  pages = {34--47}
+}
+
+@article{farkas_practice:_2010,
+  title = {In {{Practice}}: {{Your Reality}}, {{Augmented}}},
+  volume = {41},
+  issn = {0002-9769},
+  shorttitle = {In {{Practice}}},
+  timestamp = {2016-10-09T15:21:20Z},
+  number = {9},
+  urldate = {2016-10-09},
+  journal = {American Libraries},
+  author = {Farkas, Meredith},
+  year = {2010},
+  pages = {24--24}
+}
+
+@article{biocca_attention_2007,
+  title = {Attention {{Issues}} in {{Spatial Information Systems}}: {{Directing Mobile Users}}' {{Visual Attention Using Augmented Reality}}},
+  volume = {23},
+  issn = {0742-1222},
+  shorttitle = {Attention {{Issues}} in {{Spatial Information Systems}}},
+  abstract = {Knowledge of objects, situations, or locations in the environment can be productive, useful, or even life-critical for mobile augmented reality (AR) users. Users may need assistance with (1) dangers, obstacles, or situations requiring attention; (2) visual search; (3) task sequencing; and (4) spatial navigation. The omnidirectional attention funnel is a general purpose AR interface technique that rapidly guides attention to any tracked object, person, or place in the space. The attention funnel dynamically directs user attention with strong bottom-up spatial attention cues. In a study comparing the attention funnel to other attentional techniques such as highlighting and audio cueing, search speed increased by over 50 percent, and perceived cognitive load decreased by 18 percent. The technique is a general three-dimensional cursor in a wide array of applications requiring visual search, emergency warning, and alerts to specific objects or obstacles, or for three-dimensional navigation to objects in space.},
+  timestamp = {2016-10-09T16:14:14Z},
+  number = {4},
+  urldate = {2016-10-09},
+  journal = {Journal of Management Information Systems},
+  author = {Biocca, Frank and Owen, Charles and Tang, Arthur and Bohil, Corey},
+  year = {2007},
+  pages = {163--184}
+}
+
+@article{dunleavy_affordances_2009,
+  title = {Affordances and {{Limitations}} of {{Immersive Participatory Augmented Reality Simulations}} for {{Teaching}} and {{Learning}}},
+  volume = {18},
+  issn = {1059-0145},
+  abstract = {The purpose of this study was to document how teachers and students describe and comprehend the ways in which participating in an augmented reality (AR) simulation aids or hinders teaching and learning. Like the multi-user virtual environment (MUVE) interface that underlies Internet games, AR is a good medium for immersive collaborative simulation, but has different strengths and limitations than MUVEs. Within a design-based research project, the researchers conducted multiple qualitative case studies across two middle schools (6th and 7th grade) and one high school (10th grade) in the northeastern United States to document the affordances and limitations of AR simulations from the student and teacher perspective. The researchers collected data through formal and informal interviews, direct observations, web site posts, and site documents. Teachers and students reported that the technology-mediated narrative and the interactive, situated, collaborative problem solving affordances of the AR simulation were highly engaging, especially among students who had previously presented behavioral and academic challenges for the teachers. However, while the AR simulation provided potentially transformative added value, it simultaneously presented unique technological, managerial, and cognitive challenges to teaching and learning.},
+  timestamp = {2016-10-09T16:33:51Z},
+  number = {1},
+  urldate = {2016-10-09},
+  journal = {Journal of Science Education and Technology},
+  author = {Dunleavy, Matt and Dede, Chris and Mitchell, Rebecca},
+  year = {2009},
+  pages = {7--22},
+  file = {JSTOR Full Text PDF:C\:\\Users\\David\\AppData\\Roaming\\Mozilla\\Firefox\\Profiles\\xfvdzb0o.default\\zotero\\storage\\MZZNDQ4J\\Dunleavy et al. - 2009 - Affordances and Limitations of Immersive Participa.pdf:application/pdf}
+}
+
 
