--- a/report/report.tex
+++ b/report/report.tex
@@ -25,38 +25,38 @@ Something will go here.
 \chapter{Introduction}
 \pagenumbering{arabic}
 \section{Motivation}
-Frequent exercise and a healthy lifestyle have recently become an integral part of the western culture. Indeed, last year in America more people have exercised on a regular basis then ever before \cite{USexercise}. As people begin to adopt this new lifestyle it is immediately obvious that there are two distinct periods during which there seems to be a lack of coherent information. These are at the very beginning when a person begins to exercise for the first time and when a person begins to plateau and starts to experience diminishing returns for their work due to a lack of variation in their routine. It is important to note that a lack of coherent information does not necessarily mean a lack of data but instead a lack of singular consensus in the midst of conflicting and misleading information filled with fad diets, ill-informed advice and 'bro science'. It is therefore obvious that there is a need for a singular portal to which beginners and experienced gym goers alike can refer to for information. 
+Frequent exercise and a healthy lifestyle have recently become an integral part of the western culture. Indeed, last year in America more people have exercised on a regular basis then ever before \cite{USexercise}. As people begin to adopt this new and healthy lifestyle it is immediately obvious that there are two distinct periods during which there seems to be a lack of coherent information. These are at the very beginning when a person begins to exercise for the first time and when a person begins to plateau and starts to experience diminishing returns for their work due to a lack of variation in their routine. It is important to note that a lack of coherent information does not necessarily mean a lack of data but instead a lack of a singular consensus in the midst of conflicting information, fad diets, ill-informed advice and 'bro science'. It therefore, seems that there is a need for a singular portal to which both beginners and experienced gym goers alike can refer to for information regarding exercise.  
 
-\section{Aim}
-Tackling the entire topic of fitness in one application would be extremely difficult, if not impossible. Due to this we are going to focus on the gym environment and look to add value to users while they are in the gym. The aim of the application will be to help users to understand how to use gym equipment, suggest a range of exercises that can be carried out on a given piece of equipment and demonstrate how to perform the exercise with correct and safe form. 
+\section{Aim} \label{sec:aim}
+Tackling the entire topic of fitness in one application would be extremely difficult, if not impossible. Due to this we are going to narrow down the focus and seek to add value to users while they are in the gym. The aim of the application will be to help users understand how to use gym equipment, suggest a range of exercises that can be carried out on a given piece of equipment and demonstrate how to perform the exercise with correct and safe form. 
 
-One of the main goals of the app is for it to be responsive to the users environment and heavily interactive so that the user has an immersive experience. However, there is a balance to be struck to ensure that users do not loose awareness of their surrounding. One possible way of achieving this is through augmented reality which will allow us to super impose realistic human models on their device's screen without the need for a completely virtualized reality.  
-
+One of the main goals of the app is for it to be responsive to the user's environment and heavily interactive so that the user has an immersive experience. An immersive experience will keep users engaged with the app however there is a balance to be drawn here. We must be careful as to not allow users to loose track of their surroundings completely since the gym is a potentially dangerous environment. One possible way of striking this balance is through augmented reality (AR). AR would allow us to give a somewhat immersive experience by super imposing realistic human models on their device's screen without the need for a completely virtualized reality. Similar applications of AR have been trialed in education, construction, sports and medicine to various degrees of success. A review of literature regarding previous work done with AR can be found in section \ref{sec:litrew}.
 
 \section{Outline}
-In this document we are going to explore the different steps taken in the development of the augmented reality gym app. First we will look at requirements gathering and elicitation. Then we will discuss the possible designs of the app both from a user experience and user interface aspect. Later we will go trough the steps in implementation and testing, outlining the procedure and any major problems along the way. Finally we will draw the document to a close with a conclusion, followed by an evaluation where we will address to what extend the main goals of the project were achieved and reflect on what could have been done differently for future reference. 
+In this document we are going to explore the different steps taken in the development of the augmented reality gym app. First, we will review relevant literature in order to be able to make informed decisions concerning requirements and constraints. Requirements elicited from discussions with the Glasgow University Sports Association  and any other partys will also be review and summarized. Following, will be a discussion of the possible designs of the app from both a user experience and user interface aspect. Later we will go trough the steps in implementation and testing, outlining the procedure and any major problems along the way. Finally, we will draw the document to a close with a conclusion, followed by an evaluation where we will address to what extend the main goals of the project were achieved and reflect on what could have been done differently for future reference. 
 
 \chapter{Requirements}
-The quick brown fox jumped over the lazy dog.
-The quick brown fox jumped over the lazy dog.
-The quick brown fox jumped over the lazy dog.
-The quick brown fox jumped over the lazy dog.
 
-\section{Requirements gathering}
-The quick brown fox jumped over the lazy dog.
-The quick brown fox jumped over the lazy dog.
-The quick brown fox jumped over the lazy dog.
-The quick brown fox jumped over the lazy dog.
-\subsection{Questionnaire}
-The quick brown fox jumped over the lazy dog.
-The quick brown fox jumped over the lazy dog.
-The quick brown fox jumped over the lazy dog.
-The quick brown fox jumped over the lazy dog.
+
+\section{Review of previous work} \label{sec:litrew}
+The term 'augmented reality' was coined by a Boeing researcher, Tom Caudell in 1990(TODO: cite). Since then, AR has been used in a number of disciplines ranging from medicine to entertainment or construction.\nocite{azuma_recent_2001} (TODO: page 3-9). It seems that there has been no previous research done into the possible application of AR in the fitness sector and therefore we will draw on insights from previous pedagogical applications of AR with the hope of drawing parallels between pedagogical teaching and instructing users to perform exercises in the gym. 
+
+Squire and Klopfer identified the shrinking of technologies from desktop to mobile as a key opportunity for AR simulation to migrate over to handheld devices and carried out teaching experiments with AR which yieleded largely positive results \nocite{squire_augmented_2007}. AR allowed students the opportunity to explore "phenomena impossible to produce in the real world, such as diseases or toxic chemical" leaks \nocite{squire_augmented_2007} (TODO: page 372). One of the main advantages of AR is that the user needn't imagine the locational context of the situation since they are actually in it and can thus better understand and learn the information being conveyed. This is supported by the idea of situativity as proposed by Greeno which argues that immersing oneself in the context of a situation aids with its understanding (TODO cite). By developing a mobile application which is to be used in a gym, we will be able to exploit the idea of situativity and have an advantage over desktop systems and applications.
+
+(TODO tie this in somehow)
+Radu has also entertained the application of AR in education and found that there are numberous benefits\nocite{radu_why_2012}. In this experiment AR increased understanding and long-term retention of content and also improved student motivation\nocite{radu_why_2012}. Each of these are very important factors both for students and for gym goers. Improved understanding and retention of information could distinguish an AR gym application from other non-AR applications. Furthermore, if users find themselves more motivated thanks to using the AR gym application, this would be a significant selling point.
+
+There are however also some issues with AR. Usability difficulties and fluctuating levels of understanding between students have been registered when AR is used as an educational tool \nocite{radu_why_2012} and therefore usability and heuristics of the app will need to be at the center of attention. Perhaps the most important issue when creating a phone app in general and an AR app in particular is the issue of attention tunneling \nocite{radu_why_2012} \nocite{biocca_attention_2007}. Using AR is a relatively immersive experience and we must therefore take care to highlight appropriate things to the user. We want to find a balance between focusing on the app and focusing on the world around the user. Biocca et al. have pointed out that attention funneling is a problem with mobile interfaces in general, stating that "the attention demands of current interfaces such as cellular phones and PDAs may play a significant role in automobile accidents". Some AR applications such as Pokemon Go have solved the issue of attention tunneling through pop ups that remind the user to stay aware of their surroundings (TODO: cite). A similar approach should be adopted in our application to ensure the users safety and must be one of the high priority requirements.
+
+On the topic of safety, the fidelity of the demonstrated exercises by the app must be high. There are often many different ways to carry out a single exercise and frequently there is no consensus on the best approach.  
 \subsection{Meeting with GUSA}
-The quick brown fox jumped over the lazy dog.
-The quick brown fox jumped over the lazy dog.
-The quick brown fox jumped over the lazy dog.
-The quick brown fox jumped over the lazy dog.
+When developing an app of any kind it is important to consider how you are going to market and distribute the finished product. This question is particularly interesting in our context because the app needs some real-life components (markers) to work and therefore needs to be pitched to both daily users and gyms. One of the first steps that I carried out, before doing much research into technologies and development was to arrange a meeting with the Glasgow University Sports Association (GUSA). I pitched my idea to the president of GUSA in an email and was able to arrange a meeting both with GUSA president and the Sport Development Manager at Glasgow University. The meeting 	was held on the 26th of July 2016 and yielded a number of interesting requirements and points of discussion, many of which I had not previously considered. 
+
+One point of discussion was the issue of liability. The main goal of the app is to demonstrate what perfect form of an exercise looks like, however there are conflicting views as to what 'perfect' form for an exercise is. One expert might argue one way and another might be completely opposed which will mean that the app will have to choose a side. If the chosen side is eventually found to be incorrect, or worse, dangerous there could be options of liability. A potential solution would be to show a disclaimer on or during app launch that notifies the user that all demonstrations of form are approximate and that the user should contact an expert if they are unsure how to properly and safely perform an exercise. 
+
+Another topic that was discussed was the possible danger that a user might find themselves in if they become too immersed in the app and loose track of their environment. This issue has already been brought up in \ref{sec:aim} and the hope is that over-immersion can be solved through augmented reality. A further possibility would be to display a pop-up warning based on on-screen time and app run time. 
+
+
 
 \chapter{Design}
 \section{User Experience}
@@ -71,6 +71,30 @@ The quick brown fox jumped over the lazy dog.
 The quick brown fox jumped over the lazy dog.
 
 \chapter{Implementation}
+The development of an augment reality phone application sounds quite daunting at first. The image recognition, 3D object imaging and use of sensors and mathematical calculations to pivot the projected image are undoubtedly complex however luckily for us, there are many libraries and tools that allow us to abstract the complex intricate work and allow us to focus on the core app development. Having said that, the initial learning curve to find, set up and get started with all the tools and technologies is quite steep. In this section we are first going to explore the numerous tools used throughout the project, justify their selection and talk about how they are used. Later we will talk about some of the challenges that had to be overcome during the implementation process.
+\subsection{Technologies used}
+\subsubsection{Git}
+One of the first tools that was set up as a part of the project was the Git version control system. Git is usually used in the open source community or within teams to allow easy integration between contributors however in our case Git is used to keep a backup of old versions of the project and to share the progress of the project with the project supervisor. 
+
+\subsubsection{Vuforia}
+Vuforia is one of the many open source augmented reality libraries \cite{vuforia}. Vuforia provides an online interface where you can upload different images which are then analysed for specific feature patterns that are used for matching. For example figure \ref{fig:coca_cola_features} show the feature patterns of a CocaCola logo. A collection of such targets can be exported as a database and later used in Unity for matching using optical recognition \cite{vuforia_unity}.
+\begin{figure}
+\centering
+\includegraphics[scale=1]{images/coca_cola_features.png}
+\caption{Patterns of features on the CocaCola logo.}
+\label{fig:coca_cola_features}
+\end{figure}
+
+Vuforia allows us to create markers but it is also a plugin for Unity and an SDK that is used in native Android code development \cite{vuforia_unity}.
+
+\subsubsection{Unity}
+
+
+\subsubsection{MakeHuman}
+
+
+\subsection{Trials and Tribulations }
+ 
 \chapter{Testing}
 
 \chapter{Conclusion}
