Adding 1st draft of lit review. Removing temp Unity data

--- a/report/bib.bib
+++ b/report/bib.bib
@@ -249,4 +249,197 @@
   pages = {41--50}
 }
 
+@book{brooks_mythical_2013,
+  address = {Boston, Mass.},
+  edition = {Anniversary ed. with 4 new chapters, 39. printing},
+  title = {The Mythical Man-Month: Essays on Software Engineering},
+  isbn = {978-0-201-83595-3},
+  shorttitle = {The Mythical Man-Month},
+  language = {eng},
+  timestamp = {2016-10-18T17:02:40Z},
+  publisher = {{Addison-Wesley}},
+  author = {Brooks, Frederick Phillips},
+  year = {2013},
+  note = {OCLC: 935768625},
+  keywords = {Projektmanagement,Software engineering,Softwareentwicklung},
+  annote = {Literaturverz. S. 293 - 308},
+  file = {Table of Contents PDF:C\:\\Users\\David\\AppData\\Roaming\\Mozilla\\Firefox\\Profiles\\xfvdzb0o.default\\zotero\\storage\\Q6MBZRVF\\Brooks - 2013 - The mythical man-month essays on software enginee.pdf:application/pdf}
+}
+
+@article{milgram_taxonomy_1994,
+  title = {A Taxonomy of Mixed Reality Visual Displays},
+  volume = {77},
+  timestamp = {2016-10-25T13:54:28Z},
+  number = {12},
+  urldate = {2016-10-25},
+  journal = {IEICE TRANSACTIONS on Information and Systems},
+  author = {Milgram, Paul and Kishino, Fumio},
+  year = {1994},
+  pages = {1321--1329},
+  file = {Snapshot:C\:\\Users\\David\\AppData\\Roaming\\Mozilla\\Firefox\\Profiles\\xfvdzb0o.default\\zotero\\storage\\J8UV8CX8\\summary.html:text/html}
+}
+
+@article{tamura_mixed_2001,
+  title = {Mixed Reality: Future Dreams Seen at the Border between Real and Virtual Worlds},
+  volume = {21},
+  issn = {0272-1716},
+  shorttitle = {Mixed Reality},
+  doi = {10.1109/38.963462},
+  abstract = {Mixed reality (MR) is a kind of virtual reality (VR) but a broader concept than augmented reality (AR), which augments the real world with synthetic electronic data. On the opposite side, there is a term, augmented virtuality (AV), which enhances or augments the virtual environment (VE) with data from the real world. Mixed reality covers a continuum from AR to AV. This concept embraces the definition of MR stated by Milgram and Kishino (1994). We describe some technical achievements we made in the Mixed Reality Project in Japan},
+  timestamp = {2016-10-25T13:43:30Z},
+  number = {6},
+  journal = {IEEE Computer Graphics and Applications},
+  author = {Tamura, H. and Yamamoto, H. and Katayama, A.},
+  month = nov,
+  year = {2001},
+  keywords = {Augmented Reality,augmented virtuality,Cameras,Cities and towns,Computational modeling,Image reconstruction,Layout,Mixed Reality Project,rendering (computer graphics),Robustness,Solid modeling,technical achievements,virtual environment,virtual reality},
+  pages = {64--70},
+  file = {IEEE Xplore Full Text PDF:C\:\\Users\\David\\AppData\\Roaming\\Mozilla\\Firefox\\Profiles\\xfvdzb0o.default\\zotero\\storage\\6PJEGBIB\\Tamura et al. - 2001 - Mixed reality future dreams seen at the border be.pdf:application/pdf;IEEE Xplore Abstract Record:C\:\\Users\\David\\AppData\\Roaming\\Mozilla\\Firefox\\Profiles\\xfvdzb0o.default\\zotero\\storage\\S4PS5KAI\\963462.html:text/html}
+}
+
+@article{kerawalla_making_2006,
+  title = {``{{Making}} It Real'': Exploring the Potential of Augmented Reality for Teaching Primary School Science},
+  volume = {10},
+  issn = {1359-4338, 1434-9957},
+  shorttitle = {``{{Making}} It Real''},
+  doi = {10.1007/s10055-006-0036-4},
+  abstract = {The use of augmented reality (AR) in formal education could prove a key component in future learning environments that are richly populated with a blend of hardware and software applications. However, relatively little is known about the potential of this technology to support teaching and learning with groups of young children in the classroom. Analysis of teacher\textendash{}child dialogue in a comparative study between use of an AR virtual mirror interface and more traditional science teaching methods for 10-year-old children, revealed that the children using AR were less engaged than those using traditional resources. We suggest four design requirements that need to be considered if AR is to be successfully adopted into classroom practice. These requirements are: flexible content that teachers can adapt to the needs of their children, guided exploration so learning opportunities can be maximised, in a limited time, and attention to the needs of institutional and curricular requirements.},
+  language = {en},
+  timestamp = {2016-10-25T15:20:23Z},
+  number = {3-4},
+  urldate = {2016-10-25},
+  journal = {Virtual Reality},
+  author = {Kerawalla, Lucinda and Luckin, Rosemary and Seljeflot, Simon and Woolard, Adrian},
+  month = nov,
+  year = {2006},
+  pages = {163--174},
+  file = {Full Text PDF:C\:\\Users\\David\\AppData\\Roaming\\Mozilla\\Firefox\\Profiles\\xfvdzb0o.default\\zotero\\storage\\A3CPDATA\\Kerawalla et al. - 2006 - “Making it real” exploring the potential of augme.pdf:application/pdf;Snapshot:C\:\\Users\\David\\AppData\\Roaming\\Mozilla\\Firefox\\Profiles\\xfvdzb0o.default\\zotero\\storage\\T84T6IPE\\s10055-006-0036-4.html:text/html}
+}
+
+@article{cuendet_designing_2013,
+  title = {Designing Augmented Reality for the Classroom},
+  volume = {68},
+  issn = {0360-1315},
+  doi = {10.1016/j.compedu.2013.02.015},
+  abstract = {Augmented reality (AR) has recently received a lot of attention in education. Multiple AR systems for learning have been developed and tested through empirical studies often conducted in lab settings. While lab studies can be insightful, they leave out the complexity of a classroom environment. We developed three AR learning environments that have been used in genuine classroom contexts, some of them being now part of classroom regular practices. These systems and the learning activities they provide have been co-designed with teachers, for their own classrooms, through multiple cycles of prototyping and testing. We present here the features that emerged from these co-design cycles and abstract them into design principles.},
+  timestamp = {2016-10-25T13:37:55Z},
+  urldate = {2016-10-25},
+  journal = {Computers \& Education},
+  author = {Cuendet, S{\'e}bastien and Bonnard, Quentin and Do-Lenh, Son and Dillenbourg, Pierre},
+  month = oct,
+  year = {2013},
+  keywords = {Augmented Reality,Classroom orchestration,Collaborative learning,Orchestration load,Tangible interfaces},
+  pages = {557--569},
+  file = {ScienceDirect Full Text PDF:C\:\\Users\\David\\AppData\\Roaming\\Mozilla\\Firefox\\Profiles\\xfvdzb0o.default\\zotero\\storage\\K26223DR\\Cuendet et al. - 2013 - Designing augmented reality for the classroom.pdf:application/pdf;ScienceDirect Snapshot:C\:\\Users\\David\\AppData\\Roaming\\Mozilla\\Firefox\\Profiles\\xfvdzb0o.default\\zotero\\storage\\TIPXM8UD\\S0360131513000547.html:text/html}
+}
+
+@article{dede_immersive_2009,
+  title = {Immersive {{Interfaces}} for {{Engagement}} and {{Learning}}},
+  volume = {323},
+  issn = {0036-8075, 1095-9203},
+  doi = {10.1126/science.1167311},
+  language = {en},
+  timestamp = {2016-10-24T20:16:56Z},
+  number = {5910},
+  urldate = {2016-10-24},
+  journal = {Science},
+  author = {Dede, Chris},
+  month = jan,
+  year = {2009},
+  pages = {66--69}
+}
+
+@inproceedings{biocca_attention_2006,
+  address = {New York, NY, USA},
+  series = {CHI '06},
+  title = {Attention {{Funnel}}: {{Omnidirectional 3D Cursor}} for {{Mobile Augmented Reality Platforms}}},
+  isbn = {978-1-59593-372-0},
+  shorttitle = {Attention {{Funnel}}},
+  doi = {10.1145/1124772.1124939},
+  abstract = {The attention funnel is a general purpose AR interface technique that interactively guides the attention of a user to any object, person, or place in space. The technique utilizes dynamic perceptual affordances to draw user attention "down" the funnel to the target location. Attention funnel can be used to cue objects completely out of sight including objects behind the user, or occluded by other objects or walls.An experiment evaluating user performance with the attention funnel and other conventional AR attention directing techniques found that the attention funnel increased the consistency of the user's search by 65\%, increased search speed by 22\%, and decreased mental workload by 18\%. The attention funnel has potential applicability as a general 3D cursor or cue in a wide array of spatially enabled mobile and AR systems, and for applications where systems can support users in visual search, object awareness, and emergency warning in indoor and outdoor spaces.},
+  timestamp = {2016-10-25T12:30:47Z},
+  urldate = {2016-10-25},
+  booktitle = {Proceedings of the {{SIGCHI Conference}} on {{Human Factors}} in {{Computing Systems}}},
+  publisher = {{ACM}},
+  author = {Biocca, Frank and Tang, Arthur and Owen, Charles and Xiao, Fan},
+  year = {2006},
+  keywords = {Augmented Reality,mobile computing,visual attention},
+  pages = {1115--1122},
+  file = {ACM Full Text PDF:C\:\\Users\\David\\AppData\\Roaming\\Mozilla\\Firefox\\Profiles\\xfvdzb0o.default\\zotero\\storage\\HDJ7D852\\Biocca et al. - 2006 - Attention Funnel Omnidirectional 3D Cursor for Mo.pdf:application/pdf}
+}
+
+@inproceedings{looser_evaluation_2007,
+  address = {New York, NY, USA},
+  series = {GRAPHITE '07},
+  title = {An {{Evaluation}} of {{Virtual Lenses}} for {{Object Selection}} in {{Augmented Reality}}},
+  isbn = {978-1-59593-912-8},
+  doi = {10.1145/1321261.1321297},
+  abstract = {This paper reports the results of an experiment to compare three different selection techniques in a tabletop tangible augmented reality interface. Object selection is an important task in all direct manipulation interfaces because it precedes most other manipulation and navigation actions. Previous work on tangible virtual lenses for visualisation has prompted the exploration of how selection techniques can be incorporated into these tools. In this paper a selection technique based on virtual lenses is compared with the traditional approaches of virtual hand and virtual pointer methods. The Lens technique is found to be faster, require less physical effort to use, and is preferred by participants over the other techniques. These results can be useful in guiding the development of future augmented reality interfaces.},
+  timestamp = {2016-10-25T12:11:38Z},
+  urldate = {2016-10-25},
+  booktitle = {Proceedings of the 5th {{International Conference}} on {{Computer Graphics}} and {{Interactive Techniques}} in {{Australia}} and {{Southeast Asia}}},
+  publisher = {{ACM}},
+  author = {Looser, Julian and Billinghurst, Mark and Grasset, Rapha{\"e}l and Cockburn, Andy},
+  year = {2007},
+  keywords = {Augmented Reality,lens,selection technique},
+  pages = {203--210},
+  file = {ACM Full Text PDF:C\:\\Users\\David\\AppData\\Roaming\\Mozilla\\Firefox\\Profiles\\xfvdzb0o.default\\zotero\\storage\\4Z9PNTXC\\Looser et al. - 2007 - An Evaluation of Virtual Lenses for Object Selecti.pdf:application/pdf}
+}
+
+@article{iordache_comparison_2009,
+  title = {A {{Comparison}} of {{Quantitative}} and {{Qualitative Data}} from a {{Formative Usability Evaluation}} of an {{Augmented Reality Learning Scenario}}},
+  volume = {13},
+  issn = {1453-1305},
+  abstract = {The proliferation of augmented reality (AR) technologies creates opportunities for the devel-opment of new learning scenarios. More recently, the advances in the design and implementation of...},
+  timestamp = {2016-10-23T12:04:54Z},
+  number = {3},
+  urldate = {2016-10-23},
+  journal = {ResearchGate},
+  author = {Iordache, Dragos Daniel and Costin, Pribeanu},
+  month = jan,
+  year = {2009},
+  file = {Full Text PDF:C\:\\Users\\David\\AppData\\Roaming\\Mozilla\\Firefox\\Profiles\\xfvdzb0o.default\\zotero\\storage\\AWEHGD7H\\Iordache and Costin - 2009 - A Comparison of Quantitative and Qualitative Data .pdf:application/pdf;Snapshot:C\:\\Users\\David\\AppData\\Roaming\\Mozilla\\Firefox\\Profiles\\xfvdzb0o.default\\zotero\\storage\\ZJ24R8UK\\26849392_A_Comparison_of_Quantitative_and_Qualitative_Data_from_a_Formative_Usability_Evaluatio.html:text/html}
+}
+
+@article{fitzgerald_augmented_2013,
+  title = {Augmented Reality and Mobile Learning: The State of the Art},
+  volume = {5},
+  issn = {1941-8655},
+  shorttitle = {Augmented Reality and Mobile Learning},
+  abstract = {In this paper, we examine the state of the art in augmented reality (AR) for mobile learning. Previous work in the field of mobile learning has included AR as a component of a wider toolkit but little has been done to discuss the phenomenon in detail or to examine in a balanced fashion its potential for learning, identifying both positive and negative aspects. We seek to provide a working definition of AR and to examine how it can be embedded within situated learning in outdoor settings. We classify it according to key aspects (device/technology, mode of interaction/learning design, type of media, personal or shared experiences, whether the experience is portable or static, and the learning activities/outcomes). We discuss the technical and pedagogical challenges presented by AR, before looking at ways in which it can be used for learning. Finally, the paper looks ahead to AR technologies that may be employed in the future.},
+  timestamp = {2016-10-23T13:16:56Z},
+  number = {4},
+  urldate = {2016-10-23},
+  journal = {International Journal of Mobile and Blended Learning},
+  author = {FitzGerald, Elizabeth and Ferguson, Rebecca and Adams, Anne and Gaved, Mark and Mor, Yishay and Thomas, Rhodri},
+  month = dec,
+  year = {2013},
+  pages = {43--58},
+  file = {Snapshot:C\:\\Users\\David\\AppData\\Roaming\\Mozilla\\Firefox\\Profiles\\xfvdzb0o.default\\zotero\\storage\\HETRPPAM\\38386.html:text/html}
+}
+
+@article{balog_augmented_2007,
+  title = {Augmented {{Reality}} in {{Schools}}: {{Preliminary Evaluation Results}} from a {{Summer School}}},
+  volume = {1},
+  shorttitle = {Augmented {{Reality}} in {{Schools}}},
+  timestamp = {2016-10-28T17:08:57Z},
+  journal = {International Journal of Social, Behavioral, Educational, Economic, Business and Industrial Engineering},
+  author = {Balog, Alexandru and Pribeanu, Costin and Iordache, Dragos},
+  year = {2007},
+  file = {CiteSeerX — Augmented Reality in Schools\: Preliminary Evaluation Results from a Summer School:C\:\\Users\\David\\AppData\\Roaming\\Mozilla\\Firefox\\Profiles\\xfvdzb0o.default\\zotero\\storage\\ZC3Q5BCB\\summary.html:text/html}
+}
+
+@article{liestol_learning_2011,
+  title = {Learning through {{Situated Simulations}}: {{Exploring Mobile Augmented Reality}}},
+  shorttitle = {Learning through {{Situated Simulations}}},
+  abstract = {Official Full-Text Publication: Learning through Situated Simulations: Exploring Mobile Augmented Reality on ResearchGate, the professional network for scientists.},
+  timestamp = {2016-10-23T11:23:45Z},
+  urldate = {2016-10-23},
+  journal = {ResearchGate},
+  author = {Liest\o{}l, Gunnar},
+  month = jan,
+  year = {2011},
+  file = {Full Text PDF:C\:\\Users\\David\\AppData\\Roaming\\Mozilla\\Firefox\\Profiles\\xfvdzb0o.default\\zotero\\storage\\NR6WBQCT\\Liestøl - 2011 - Learning through Situated Simulations Exploring M.pdf:application/pdf;Snapshot:C\:\\Users\\David\\AppData\\Roaming\\Mozilla\\Firefox\\Profiles\\xfvdzb0o.default\\zotero\\storage\\3HT2Z8CG\\228889868_Learning_through_Situated_Simulations_Exploring_Mobile_Augmented_Reality.html:text/html}
+}
+
 
