--- a/report/bib.bib
+++ b/report/bib.bib
@@ -1,4 +1,3 @@
-
 @misc{mindfront_tank_????,
   title = {Tank {{Top}} 01},
   timestamp = {2016-09-25T15:31:14Z},
@@ -106,9 +105,9 @@
   shorttitle = {Why Should My Students Use {{AR}}?},
   doi = {10.1109/ISMAR.2012.6402590},
   abstract = {Augmented reality is increasingly reaching young users such as elementary-school and high-school children, as their parents and teachers become aware of the technology and its potential for education. Although research has shown that AR systems have the potential to improve student learning, the educator community does not clearly understand the educational impact of AR, nor the factors which impact the educational effectiveness of AR. In this poster, we analyse 32 publications that have previously compared learning effects of AR vs non-AR applications. We identify a list of positive and negative impacts of AR on student learning, and identify potential underlying causes for these effects. Our vision is that educational initiatives will exploit these factors, in order to realize the full potential of AR to enrich learner's lives.},
-  timestamp = {2016-10-30T15:51:05Z},
+  timestamp = {2016-10-07T13:40:31Z},
   booktitle = {2012 {{IEEE International Symposium}} on {{Mixed}} and {{Augmented Reality}} ({{ISMAR}})},
-  author = {Radu, Iulian},
+  author = {Radu, I.},
   month = nov,
   year = {2012},
   keywords = {AR learning effects,AR systems,Augmented Reality,Augmented reality,augmented reality,augmented-reality,Children,computer aided instruction,Computers,Education,educational effectiveness,educational impacts,educational initiatives,educator community,elementary-school children,high-school children,Human Factors,Human factors,Machine learning,Media,parents,Solid modeling,student learning,teachers},
@@ -440,57 +439,6 @@
   month = jan,
   year = {2011},
   file = {Full Text PDF:C\:\\Users\\David\\AppData\\Roaming\\Mozilla\\Firefox\\Profiles\\xfvdzb0o.default\\zotero\\storage\\NR6WBQCT\\Liestøl - 2011 - Learning through Situated Simulations Exploring M.pdf:application/pdf;Snapshot:C\:\\Users\\David\\AppData\\Roaming\\Mozilla\\Firefox\\Profiles\\xfvdzb0o.default\\zotero\\storage\\3HT2Z8CG\\228889868_Learning_through_Situated_Simulations_Exploring_Mobile_Augmented_Reality.html:text/html}
-}
-
-@article{stray_daily_2016,
-  title = {The Daily Stand-up Meeting: {{A}} Grounded Theory Study},
-  volume = {114},
-  issn = {0164-1212},
-  shorttitle = {The Daily Stand-up Meeting},
-  doi = {10.1016/j.jss.2016.01.004},
-  abstract = {The daily stand-up meeting is one of the most used agile practices but has rarely been the subject of empirical research. The present study aims to identify how daily stand-up meetings are conducted and what the attitudes towards them are. A grounded theory study with 12 software teams in three companies in Malaysia, Norway, Poland and the United Kingdom was conducted. We interviewed 60 people, observed 79 daily stand-up meetings and collected supplementary data. The factors that contributed the most to a positive attitude towards the daily stand-up meeting were information sharing with the team and the opportunity to discuss and solve problems. The factors that contributed the most to a negative attitude were status reporting to the manager and that the frequency of the meeting was perceived to be too high and the duration too long. Based on our results, we developed a grounded theory of daily stand-up meetings and proposed empirically based recommendations and guidelines on how to organize them. Organizations should be aware of the factors that may affect the attitude towards daily stand-up meetings and should consider our recommendations and guidelines to make this agile practice as valuable as possible.},
-  timestamp = {2016-12-02T00:09:53Z},
-  urldate = {2016-12-02},
-  journal = {Journal of Systems and Software},
-  author = {Stray, Viktoria and Sj\o{}berg, Dag I. K. and Dyb\aa{}, Tore},
-  month = apr,
-  year = {2016},
-  keywords = {Agile software development,Daily meeting,Daily Scrum meeting},
-  pages = {101--124}
-}
-
-@misc{unity_technologies_why_2016,
-  title = {Why Can't {{I}} Remove the {{Splash Screen}} from My Build?},
-  abstract = {Symptoms
-
-I want to remove the 'Made with Unity' Splash Screen from my build
-I am unable to remove the Unity Splash Screen from my project
-
-Cause
-The 'Made with Unity' Splash Screen plays while you...},
-  timestamp = {2016-11-20T14:20:38Z},
-  urldate = {2016-11-20},
-  howpublished = {\url{http://support.unity3d.com/hc/en-us/articles/212165803-Why-can-t-I-remove-the-Splash-Screen-from-my-build-}},
-  journal = {Unity},
-  author = {{Unity Technologies}},
-  month = jul,
-  year = {2016}
-}
-
-@article{chua_resistance_2011,
-  title = {Resistance Switching Memories Are Memristors},
-  volume = {102},
-  issn = {0947-8396, 1432-0630},
-  doi = {10.1007/s00339-011-6264-9},
-  language = {en},
-  timestamp = {2016-11-22T16:46:24Z},
-  number = {4},
-  urldate = {2016-11-22},
-  journal = {Applied Physics A},
-  author = {Chua, Leon},
-  month = mar,
-  year = {2011},
-  pages = {765--783}
 }
 
 
