Fixing small syntax error in latex file

--- a/report/report.tex
+++ b/report/report.tex
@@ -268,13 +268,13 @@ The second round of user testing took place again at the Glasgow University Gym 
 \begin{table}[ht]
 \small
 \centering
-\resizebox{25cm}{!}{\begin{tabular}{p{0.5cm}{1cm}p{2cm}p{3cm}p{3cm}p{3cm}p{3cm}p{3cm}p{3cm}p{2cm}}
+\resizebox{25cm}{!}{\begin{tabular}{p{0.5cm}p{1cm}p{2cm}p{3cm}p{3cm}p{3cm}p{3cm}p{3cm}p{3cm}p{2cm}}
 \textbf{User} & \textbf{Gym visits (/week)} & \textbf{Design} & \textbf{Ease of Navigation} & \textbf{Ease of use (AR view)} & \textbf{Ability to learn based on animation} & \textbf{Improvements} & \textbf{Future features} & \textbf{Best feature} & \textbf{Recommend the app to a friend?} \\ \hline
 A & 0 & Good overall, could improve the muscles section & Very easy & Easy but with technical issues & Yes & Improve the design of search section, improve the QR scan. & More exercises & AR View & Yes \\
 B & 4 & Graphics of exercises quite good, some text is a bit blurry & Very easy & Character too big, difficult to keep QR code in view & Learn, given previous understanding & Improve menu, shrink character, add equipment & Include both genders,  option to see instructions to exercises & Very creative, useful and applicable & Probably, after improvements \\
 C & 6 & Very professional, needs polishing & Easy but more features could become harder to find for a new user. back button should point left not up & quite difficult to keep the avatar on screen & link to the info screen from avatar with more detailed instructions and text & n/a & customise avatar, more detailed instructions in info with muscle heat maps & the augmented avatar & 100\% \\
 D & 4 & I liked the colours, it was clean looking and nicely simple. & very easy to navigate, one hesitation point was getting back to being able to scan when i searched for a muscle group. & medium, several times I stepped too far back so lost the avatar. & Yes & Be able to change the size of the avatar to fit it to the screen better & How many times you've used/work out each muscle group to give a sense of progress & avatar showing full movements , have found it hard to have the right form by following 2D graphics & Yes \\
-E & 5 & I like it, it's simple to find your way around & Quite easy, except "hide bro"" doesn't really translate to ""go back""" & It was ok, sometimes the man disappeared, hard to scan the QR code & Yes & Alignment of the man with the code, he disappeared often & Nutrition tips & You can search for things without scanning & Yes \\
+E & 5 & I like it, it's simple to find your way around & Quite easy, except "hide bro"" doesn't really translate to ""go back" & It was ok, sometimes the man disappeared, hard to scan the QR code & Yes & Alignment of the man with the code, he disappeared often & Nutrition tips & You can search for things without scanning & Yes \\
 F & 5 & aesthetically pleasing & easy, clear what to do & the man made it clear what to do, some problem with him disappearing when QR code lost & yes & try improve QR code alignment & a women or man option for the augmented reality & scanning the QR codes to show exercises & yes \\
 G & 3 & Intuitive and easy & No problem at all & Sometimes it was difficult to scan initially & Yes easily & A link to the machine name from the video of the bro & A link to the machine name from the video of the bro & The virtual bro & yes \\
 H & 0 & good & easy & medium & yes & make the guy a lot smaller as you often can't see him &  & ar & yes \\
@@ -332,7 +332,7 @@ In accordance with Agile principles, the product has been evaluated throughout t
 \begin{table}[]
 \centering
 \resizebox{\textwidth}{!}{%
-\begin{tabular}{p{2cm}p{5cm}p{5cm}p{5cm}p{5cm}}
+\begin{tabular}{p{3cm}p{5cm}p{5cm}p{5cm}p{5cm}}
 \textbf{Requirement Number} & \textbf{Requirement Text} & \textbf{Guiding Question} & \textbf{Acceptance Criteria} & \textbf{Result} \\\hline
 I & Exploit situativity through location based interaction & Is the app usable in the gym? Is there utility from using the app in the gym as opposed to at home? & User feedback & Most users able to learn from the app (Table \ref{tbl:2ndtest}) Improvements necessary (option to change size of avatar) \\ \hline
 II & Ensure the application is usable in any environment and with any brand of equipment & Does the app work anywhere and with any brand of equipment? & Test app with multiple manufactures/in multiple environment & QR code enables usage with in any environment/with any model \\\hline
